# Package
[package]
# Serialization helpers and derive utilities for the Suon MMORPG framework.
name = "suon_serde"
version.workspace = true
edition.workspace = true

# Minimum supported Rust version for this crate.
rust-version = "1.85"
authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Serialization helpers and derive utilities for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
