# Package
[package]
# Serialization helpers and derive utilities for the Suon MMORPG framework.
name = "suon_serde"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Serialization helpers and derive utilities for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }
suon_macros.workspace = true

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
