# Package
[package]
# Custom serde helpers for Duration serialization
name = "suon_serde"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is
description = "Custom serde helpers for the Suon MMORPG server"

[lib]
bench = false

[dependencies]
serde.workspace = true
