# Package
[package]
# Game session lifecycle for the Suon MMORPG framework.
name = "suon_session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Game session lifecycle for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
bevy = { workspace = true, features = [
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_log",
  "async_executor",
] }

# Internal Suon crates used by this crate.
suon_chunk.workspace = true
suon_movement.workspace = true
suon_network.workspace = true
suon_position.workspace = true
suon_protocol.workspace = true
suon_protocol_client.workspace = true
suon_protocol_server.workspace = true
