# Package
[package]
# Async task scheduling integration for the Suon MMORPG framework.
name = "suon_task"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "Async task scheduling integration for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
bevy = { workspace = true, features = [
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_log",
  "async_executor",
] }
