# Package
[package]
# XTEA cipher implementation for the Suon MMORPG framework.
name = "suon_xtea"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is.
description = "XTEA cipher implementation for the Suon MMORPG framework"

[dependencies]
# External crates used directly by this crate.
bytes.workspace = true
thiserror.workspace = true
