# Package
[package]
# XTEA cipher implementation for the Suon MMORPG server
name = "suon_xtea"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
license.workspace = true
repository.workspace = true

# Short crates.io summary describing what the package is
description = "XTEA cipher implementation for the Suon MMORPG server"

[lib]
bench = false

[dev-dependencies]
# Shared third-party dependencies
criterion = { workspace = true, features = ["rayon", "cargo_bench_support"] }

[[bench]]
name = "xtea"
harness = false
